--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="">
 
     <div class="container mx-auto flex-grow">
-        <div class="bg-white h-auto rounded-lg shadow-xl p-6 max-w-sm mx-auto">
+        <div class="bg-white h-auto p-6 pt-4 max-w-sm mx-auto">
             <div class="flex items-center justify-start mb-6">
                 <!-- Left Section: Image -->
                 <div class="flex justify-center items-center mr-6">
@@ -109,7 +109,7 @@
                                 Or send your inquiry by SMS
                             </a>
                         </div>
-                    </div>
+                    </div>s
                 </div>
             </div>
 
@@ -252,7 +252,7 @@
 
 
                         <!-- App Development Section -->
-                        <button
+                        <!-- <button
                             class="accordion-btn w-full text-left py-4 px-6 bg-[#fe7d66] text-white font-semibold rounded-lg shadow-lg mt-2 transition duration-300 ease-in-out transform hover:bg-[#f56a47] hover:scale-105 focus:outline-none flex items-center space-x-3">
                             <i class="fas fa-laptop-code text-lg"></i>
                             <span>App Development</span>
@@ -264,7 +264,7 @@
                                 experiences. Our team uses the latest technologies to build apps that are intuitive,
                                 efficient, and meet your specific business needs.
                             </p>
-                        </div>
+                        </div> -->
 
                         <!-- Download Brochure Button -->
                         <div
@@ -275,15 +275,18 @@
                             </a>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
 
+            <div class="mt-10">
+                <p class="text-2xl font-medium text-black text-center  opacity-80">
+                    Think Globally, Act Locally
+                </p>
+            </div>
+
+
         </div>
     </div>
-
     <style>
         .accordion-btn {
             transition: all 0.3s ease;
