--- a/index.html
+++ b/index.html
@@ -44,12 +44,6 @@
                     <i class="fas fa-envelope text-xl"></i>
                 </a>
 
-                <!-- Download VCard -->
-                <a href="/vcard.vcf" download="vcard.vcf"
-                    class="bg-[#03293c] hover:bg-[#026475] text-white font-semibold py-2 px-4 rounded-lg shadow-md transition-all ease-in-out duration-300">
-                    <i class="fas fa-download text-xl"></i>
-                </a>
-
                 <!-- Send Inquiry Link -->
                 <a href="javascript:void(0);" onclick="openModal()"
                     class="bg-[#03293c] hover:bg-[#026475] text-white font-semibold py-2 px-4 rounded-lg shadow-md transition-all ease-in-out duration-300">
@@ -109,11 +103,19 @@
                                 Or send your inquiry by SMS
                             </a>
                         </div>
-                    </div>s
+                    </div>
                 </div>
             </div>
 
-            <div class="py-1">
+            <div class="flex justify-center items-center mx-auto">
+                <a href="/vcard.vcf" download="vcard.vcf"
+                    class="bg-[#03293c] hover:bg-[#026475] text-white font-semibold py-2 px-4 rounded-lg shadow-md transition-all ease-in-out duration-300">
+                    <i class="fas fa-download text-xl"></i> Save contact
+                </a>
+            </div>
+            
+
+            <div class="py-4">
                 <div class="space-y-6">
                     <h3 class="text-3xl font-semibold text-[#fe7d66] text-center mb-6">About us </h3>
                     <div class="accordion space-y-4">
@@ -128,19 +130,19 @@
                             <div class="space-y-6">
                                 <div class="space-y-4">
                                     <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
-                                        <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Ravi Senjaliya:
+                                        <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Nexalussoft:
                                         <span
                                             class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
                                             +91 9327429653
                                         </span>
                                     </p>
-                                    <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
+                                    <!-- <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
                                         <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Bhargav Desai:
                                         <span
                                             class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
                                             +91 97145 00690
                                         </span>
-                                    </p>
+                                    </p> -->
                                 </div>
                                 <!-- Address Section -->
                                 <div class="flex items-start">
