number and logo

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <i class="fas fa-download text-xl"></i> Save contact
                 </a>
             </div>
-            
+
 
             <div class="py-4">
                 <div class="space-y-6">
@@ -129,20 +129,26 @@
                             class="accordion-content hidden px-4 py-4 text-gray-800 bg-white rounded-lg shadow-md md:px-6 md:py-6">
                             <div class="space-y-6">
                                 <div class="space-y-4">
+                                    <div>
+                                        <div class="flex items-center">
+                                            <img src="/LOGO1.webp" class="w-12 mr-2" alt="">
+                                            <h1 class="pt-[0.1rem] text-xl">Nexalussoft</h1>
+                                        </div>
+                                        <p class="text-base pt-[1rem] md:text-lg font-medium text-gray-700 flex items-center">
+                                            <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Ravi Senjaliya:
+                                            <span
+                                                class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
+                                                +91 9327429653
+                                            </span>
+                                        </p>
+                                    </div>
                                     <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
-                                        <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Nexalussoft:
-                                        <span
-                                            class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
-                                            +91 9327429653
-                                        </span>
-                                    </p>
-                                    <!-- <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
                                         <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Bhargav Desai:
                                         <span
                                             class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
                                             +91 97145 00690
                                         </span>
-                                    </p> -->
+                                    </p>
                                 </div>
                                 <!-- Address Section -->
                                 <div class="flex items-start">
