--- a/index.html
+++ b/index.html
@@ -132,21 +132,25 @@
                                     <div>
                                         <div class="flex items-center">
                                             <img src="/LOGO1.webp" class="w-12 mr-2" alt="">
-                                            <h1 class="pt-[0.1rem] text-xl">Nexalussoft</h1>
+                                            <h1 class="pt-[0.1rem] text-xl">Nexalussoft</h1> 
+                                            <span class="ml-2 pt-[0.1rem] font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
+                                                +91 9327429653
+                                            </span> 
                                         </div>
                                         <p class="text-base pt-[1rem] md:text-lg font-medium text-gray-700 flex items-center">
-                                            <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Ravi Senjaliya:
-                                            <span
-                                                class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
-                                                +91 9327429653
-                                            </span>
+                                            <i class="fas fa-user mr-2 text-[#fe7d66]"></i> 
+                                            Ravi Senjaliya: 
+                                            <span class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
+                                                ceo
+                                            </span> 
                                         </p>
                                     </div>
+                                    
                                     <p class="text-base md:text-lg font-medium text-gray-700 flex items-center">
                                         <i class="fas fa-user mr-2 text-[#fe7d66]"></i> Bhargav Desai:
                                         <span
                                             class="ml-2 font-semibold text-[#fe7d66] hover:text-[#ff6c50] transition-colors">
-                                            +91 97145 00690
+                                            ceo
                                         </span>
                                     </p>
                                 </div>
